# DevHunt

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  HUNT_TERMINAL_DOCS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  build_desktop.bat  hunter  hunter.bat  notifications.json  open_source_launch_plan.txt  repo_launch_checklist.txt  run.bat  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  sonar.yml
backend/: app.py  check_requirements.py  config.py  devhunt_backend.spec  hunter_cli.py  requirements.txt
backend/core/: chat_engine.py  db.py  document_analyzer.py  key_manager.py  local_services.py  memory_manager.py  profile_manager.py  rag_pipeline.py  terminal_engine.py  todo_manager.py
backend/data/: learning_path.json
devhunt-website/: .htaccess  404.html  README.md  _redirects  docs.html  humans.txt  index.html  manifest.json  netlify.toml  robots.txt  security.txt  sitemap.xml
docs/: api_analysis.md  app_endpoints.md  arcade_and_layout.md  auxiliary_core.md  chat_engine.md  check_requirements.md  desktop_app_packaging.md  memory_manager.md  roadmap.md  tech_stack_and_editor_guide.md  terminal_engine.md  todo_manager.md  update_manager.md
frontend/: app.js  arcade.js  docs.html  index.html  logs.html  styles.css
frontend-src/: index.html  package-lock.json  package.json  vite.config.js
frontend-src/src-tauri/: Cargo.toml  tauri.conf.json
frontend-src/src-tauri/icons/: icon.icns
frontend-src/src-tauri/src/: lib.rs  main.rs
(+13 files in other folders)
